--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-5.90MB/s(Youtube:不良林), server: 36.139.166.64, port: 2501, type: vmess, uuid: 6861c307-5efd-3b8a-b7fa-248ad8dde74e, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: 36.139.166.64}}
-  - {name: 🇳🇱 荷兰-1.79MB/s(Youtube:不良林), server: 213.183.59.214, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 未知国家-402.6KB/s(Youtube:不良林), server: us03.gogogoo.cyou, port: 443, type: vmess, uuid: db5d1aa3-908b-44d1-be0a-4e6a8d4e4cda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /go, ws-headers: {Host: us03.gogogoo.cyou}}
-  - {name: 🇩🇪 德国-353.0KB/s(Youtube:不良林), server: 161.35.69.20, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-9.20MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-464.7KB/s(Youtube:不良林), server: cnus.v2yyds.cc, port: 32913, type: trojan, password: 90a0dcfe-f7bc-49ba-a72d-762959a03c9f, sni: cnus.v2yyds.cc, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-748.3KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇳🇱 荷兰-1.07MB/s(Youtube:不良林), server: 213.183.59.214, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
-  - {name: 🇳🇱 荷兰-1.71MB/s(Youtube:不良林), server: 213.183.59.214, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇳🇱 荷兰-1.17MB/s(Youtube:不良林), server: 213.183.59.211, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇸🇬 新加坡-1.39MB/s(Youtube:不良林), server: sg.v2yyds.cc, port: 35212, type: trojan, password: 90a0dcfe-f7bc-49ba-a72d-762959a03c9f, sni: sg.v2yyds.cc, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.04MB/s(Youtube:不良林), server: 2.game.speed.zz.001.oooooooooo.icu, port: 53945, type: vmess, uuid: 0f62bb1b-dd16-3bb2-a435-c13e068b0955, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-408.6KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-239.1KB/s(Youtube:不良林), server: 213.183.59.206, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
+  - {name: 🇷🇺 俄罗斯联邦-458.9KB/s(Youtube:不良林), server: 213.183.53.208, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
+  - {name: 🇳🇱 荷兰-1.85MB/s(Youtube:不良林), server: 213.183.59.211, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
+  - {name: 🇳🇱 荷兰-1.53MB/s(Youtube:不良林), server: 213.183.59.211, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
+  - {name: 🇳🇱 荷兰-1.42MB/s(Youtube:不良林), server: 213.183.59.211, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
+  - {name: 🇳🇱 荷兰-1.64MB/s(Youtube:不良林), server: 213.183.59.211, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
+  - {name: 🇳🇱 荷兰-1.51MB/s(Youtube:不良林), server: 213.183.59.211, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.90MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.79MB/s(Youtube:不良林)
-      - 未知国家-402.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-353.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.20MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-464.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-748.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.71MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.17MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-408.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-239.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-458.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.42MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-5.90MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.79MB/s(Youtube:不良林)
-      - 未知国家-402.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-353.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.20MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-464.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-748.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.71MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.17MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-408.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-239.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-458.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.42MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.90MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.79MB/s(Youtube:不良林)
-      - 未知国家-402.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-353.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.20MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-464.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-748.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.71MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.17MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-408.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-239.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-458.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.42MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-5.90MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.79MB/s(Youtube:不良林)
-      - 未知国家-402.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-353.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.20MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-464.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-748.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.71MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.17MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-408.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-239.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-458.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.42MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.90MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.79MB/s(Youtube:不良林)
-      - 未知国家-402.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-353.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.20MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-464.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-748.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.71MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.17MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-408.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-239.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-458.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.42MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.90MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.79MB/s(Youtube:不良林)
-      - 未知国家-402.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-353.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.20MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-464.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-748.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.71MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.17MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-408.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-239.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-458.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.42MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.90MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.79MB/s(Youtube:不良林)
-      - 未知国家-402.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-353.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.20MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-464.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-748.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.71MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.17MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-408.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-239.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-458.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.42MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
