--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-1.39MB/s(Youtube:不良林), server: sg.v2yyds.cc, port: 35212, type: trojan, password: 90a0dcfe-f7bc-49ba-a72d-762959a03c9f, sni: sg.v2yyds.cc, skip-cert-verify: true}
   - {name: 🇨🇳 中国-6.04MB/s(Youtube:不良林), server: 2.game.speed.zz.001.oooooooooo.icu, port: 53945, type: vmess, uuid: 0f62bb1b-dd16-3bb2-a435-c13e068b0955, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-408.6KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-239.1KB/s(Youtube:不良林), server: 213.183.59.206, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
-  - {name: 🇷🇺 俄罗斯联邦-458.9KB/s(Youtube:不良林), server: 213.183.53.208, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
+  - {name: 🇨🇳 中国-10.33MB/s(Youtube:不良林), server: 36.139.166.64, port: 2703, type: vmess, uuid: 6861c307-5efd-3b8a-b7fa-248ad8dde74e, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: 36.139.166.64}}
+  - {name: 🇳🇱 荷兰-570.5KB/s(Youtube:不良林), server: 213.183.59.214, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
+  - {name: 🇸🇬 新加坡-2.12MB/s(Youtube:不良林), server: sg.v2yyds.cc, port: 35211, type: trojan, password: 90a0dcfe-f7bc-49ba-a72d-762959a03c9f, sni: sg.v2yyds.cc, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-15.75MB/s(Youtube:不良林), server: 3.2.1.fuckppppp.today, port: 60302, type: vmess, uuid: 0f62bb1b-dd16-3bb2-a435-c13e068b0955, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇳🇱 荷兰-1.85MB/s(Youtube:不良林), server: 213.183.59.211, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
   - {name: 🇳🇱 荷兰-1.53MB/s(Youtube:不良林), server: 213.183.59.211, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
-  - {name: 🇳🇱 荷兰-1.42MB/s(Youtube:不良林), server: 213.183.59.211, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
+  - {name: 🇳🇱 荷兰-2.61MB/s(Youtube:不良林), server: 213.183.59.211, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
   - {name: 🇳🇱 荷兰-1.64MB/s(Youtube:不良林), server: 213.183.59.211, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
   - {name: 🇳🇱 荷兰-1.51MB/s(Youtube:不良林), server: 213.183.59.211, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.39MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-408.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-239.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-458.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.33MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-570.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.75MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.42MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.61MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-1.39MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-408.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-239.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-458.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.33MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-570.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.75MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.42MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.61MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.39MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-408.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-239.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-458.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.33MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-570.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.75MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.42MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.61MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-1.39MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-408.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-239.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-458.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.33MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-570.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.75MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.42MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.61MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.39MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-408.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-239.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-458.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.33MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-570.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.75MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.42MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.61MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-1.39MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-408.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-239.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-458.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.33MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-570.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.75MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.42MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.61MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-1.39MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-408.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-239.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-458.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.33MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-570.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.75MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.42MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.61MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
 rules:
