--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-6.04MB/s(Youtube:不良林), server: 2.game.speed.zz.001.oooooooooo.icu, port: 53945, type: vmess, uuid: 0f62bb1b-dd16-3bb2-a435-c13e068b0955, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-10.33MB/s(Youtube:不良林), server: 36.139.166.64, port: 2703, type: vmess, uuid: 6861c307-5efd-3b8a-b7fa-248ad8dde74e, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: 36.139.166.64}}
-  - {name: 🇳🇱 荷兰-570.5KB/s(Youtube:不良林), server: 213.183.59.214, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
-  - {name: 🇸🇬 新加坡-2.12MB/s(Youtube:不良林), server: sg.v2yyds.cc, port: 35211, type: trojan, password: 90a0dcfe-f7bc-49ba-a72d-762959a03c9f, sni: sg.v2yyds.cc, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-15.75MB/s(Youtube:不良林), server: 3.2.1.fuckppppp.today, port: 60302, type: vmess, uuid: 0f62bb1b-dd16-3bb2-a435-c13e068b0955, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.11MB/s(Youtube:不良林), server: 36.139.166.62, port: 2702, type: vmess, uuid: 6861c307-5efd-3b8a-b7fa-248ad8dde74e, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: 36.139.166.62}}
+  - {name: 🇳🇱 荷兰-208.7KB/s(Youtube:不良林), server: 213.183.59.206, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
+  - {name: 🇳🇱 荷兰-897.1KB/s(Youtube:不良林), server: 213.183.59.214, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
+  - {name: 🇺🇸 美国-337.4KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.36MB/s(Youtube:不良林), server: 36.139.154.148, port: 2602, type: vmess, uuid: 6861c307-5efd-3b8a-b7fa-248ad8dde74e, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: 36.139.154.148}}
   - {name: 🇳🇱 荷兰-1.85MB/s(Youtube:不良林), server: 213.183.59.211, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
   - {name: 🇳🇱 荷兰-1.53MB/s(Youtube:不良林), server: 213.183.59.211, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
   - {name: 🇳🇱 荷兰-2.61MB/s(Youtube:不良林), server: 213.183.59.211, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
-  - {name: 🇳🇱 荷兰-1.64MB/s(Youtube:不良林), server: 213.183.59.211, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
+  - {name: 🇳🇱 荷兰-222.2KB/s(Youtube:不良林), server: 213.183.59.211, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
   - {name: 🇳🇱 荷兰-1.51MB/s(Youtube:不良林), server: 213.183.59.211, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.33MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-570.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-208.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-897.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-337.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.36MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.61MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-222.2KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.33MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-570.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-208.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-897.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-337.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.36MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.61MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-222.2KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.33MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-570.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-208.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-897.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-337.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.36MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.61MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-222.2KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.33MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-570.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-208.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-897.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-337.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.36MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.61MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-222.2KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.33MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-570.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-208.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-897.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-337.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.36MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.61MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-222.2KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.33MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-570.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-208.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-897.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-337.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.36MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.61MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-222.2KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.33MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-570.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-208.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-897.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-337.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.36MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.61MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-222.2KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
